feat: Now has live update for Bidding
